// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-fake-tabs Default Tabs 1`] = `
<div
  className="fake-tabs"
>
  <ul
    className="fake-tabs__items"
  >
    <li
      className="fake-tabs__item"
    >
      <a
        aria-current="page"
        href="http://ebay.com"
      >
        eBay.com
      </a>
    </li>
    <li
      className="fake-tabs__item"
    >
      <a
        aria-current={null}
        href="http://ebay.de"
      >
        eBay.de
      </a>
    </li>
    <li
      className="fake-tabs__item"
    >
      <a
        aria-current={null}
        href="http://ebay.co.uk"
      >
        eBay.co.uk
      </a>
    </li>
  </ul>
  <div
    className="fake-tabs__content"
  >
    <div
      className="fake-tabs__cell"
    >
      <h3>
        eBay.com Content
      </h3>
      <p>
        Some US content...
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots ebay-fake-tabs Pre-selected Tab 1`] = `
<div
  className="fake-tabs"
>
  <ul
    className="fake-tabs__items"
  >
    <li
      className="fake-tabs__item"
    >
      <a
        aria-current={null}
        href="http://ebay.com"
      >
        eBay.com
      </a>
    </li>
    <li
      className="fake-tabs__item"
    >
      <a
        aria-current="page"
        href="http://ebay.de"
      >
        eBay.de
      </a>
    </li>
    <li
      className="fake-tabs__item"
    >
      <a
        aria-current={null}
        href="http://ebay.co.uk"
      >
        eBay.co.uk
      </a>
    </li>
  </ul>
  <div
    className="fake-tabs__content"
  >
    <div
      className="fake-tabs__cell"
    >
      <h3>
        eBay.de Content
      </h3>
      <p>
        Some German content...
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots ebay-fake-tabs tabMatchesCurrentUrl: false 1`] = `
<div
  className="fake-tabs"
>
  <ul
    className="fake-tabs__items"
  >
    <li
      className="fake-tabs__item"
    >
      <a
        aria-current={null}
        href="http://ebay.com"
      >
        eBay.com
      </a>
    </li>
    <li
      className="fake-tabs__item"
    >
      <a
        aria-current={null}
        href="http://ebay.de"
      >
        eBay.de
      </a>
    </li>
    <li
      className="fake-tabs__item"
    >
      <a
        aria-current="true"
        href="http://ebay.co.uk"
      >
        eBay.co.uk
      </a>
    </li>
  </ul>
  <div
    className="fake-tabs__content"
  >
    <div
      className="fake-tabs__cell"
    >
      <h3>
        eBay.co.uk Content
      </h3>
      <p>
        Some British content...
      </p>
    </div>
  </div>
</div>
`;
